Made layout for HTML, and updated CSS variables to overall theme

--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
 
 </head>
 <body>
-
-
-    
+    <header>
+        <h1>The Coding Quiz</h1>
+    </header>
+    <main>
+        <section id="gameZone">
+            <section id="questionZone"></section>
+            <section id="answerZone"></section>
+        </section>
+        <section>
+            <section>
+                </section>
+                <section id="countDown">
+                    <div id="countDownText"></div>
+                </section>
+                <section id="scoreZone">
+                    <div id="score"></div>
+                    <div id="highScore"></div>
+                </section>
+                <div id="startButton">Start the Game</div>
+            </section>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
