Updated game logic finishing the html, css, and js.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section id="gameZone">
             <section id="questionZone"></section>
             <section id="answerZone"></section>
+            <div id="answerFeedback"></div>
         </section>
         <section>
             <section>
